Add Write() to Memory Map; update docs.

--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -7,9 +7,95 @@ references:
   commentId: N:ZazBoy
   fullName: ZazBoy
   nameWithType: ZazBoy
-- uid: ZazBoy.Program
-  name: Program
-  href: api/ZazBoy.Program.html
-  commentId: T:ZazBoy.Program
-  fullName: ZazBoy.Program
-  nameWithType: Program
+- uid: ZazBoy.MemoryMap
+  name: MemoryMap
+  href: api/ZazBoy.MemoryMap.html
+  commentId: T:ZazBoy.MemoryMap
+  fullName: ZazBoy.MemoryMap
+  nameWithType: MemoryMap
+- uid: ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
+  name: CARTRIDGE_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_CARTRIDGE_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
+  fullName: ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
+  nameWithType: MemoryMap.CARTRIDGE_ADDRESS
+- uid: ZazBoy.MemoryMap.EXRAM_ADDRESS
+  name: EXRAM_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_EXRAM_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.EXRAM_ADDRESS
+  fullName: ZazBoy.MemoryMap.EXRAM_ADDRESS
+  nameWithType: MemoryMap.EXRAM_ADDRESS
+- uid: ZazBoy.MemoryMap.HRAM_ADDRESS
+  name: HRAM_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_HRAM_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.HRAM_ADDRESS
+  fullName: ZazBoy.MemoryMap.HRAM_ADDRESS
+  nameWithType: MemoryMap.HRAM_ADDRESS
+- uid: ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+  name: INTERRUPT_ENABLE_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_INTERRUPT_ENABLE_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+  fullName: ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+  nameWithType: MemoryMap.INTERRUPT_ENABLE_ADDRESS
+- uid: ZazBoy.MemoryMap.IO_ADDRESS
+  name: IO_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_IO_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.IO_ADDRESS
+  fullName: ZazBoy.MemoryMap.IO_ADDRESS
+  nameWithType: MemoryMap.IO_ADDRESS
+- uid: ZazBoy.MemoryMap.OAM_ADDRESS
+  name: OAM_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_OAM_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.OAM_ADDRESS
+  fullName: ZazBoy.MemoryMap.OAM_ADDRESS
+  nameWithType: MemoryMap.OAM_ADDRESS
+- uid: ZazBoy.MemoryMap.PROHIBITED_ADDRESS
+  name: PROHIBITED_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_PROHIBITED_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.PROHIBITED_ADDRESS
+  fullName: ZazBoy.MemoryMap.PROHIBITED_ADDRESS
+  nameWithType: MemoryMap.PROHIBITED_ADDRESS
+- uid: ZazBoy.MemoryMap.Read(System.UInt16)
+  name: Read(UInt16)
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Read_System_UInt16_
+  commentId: M:ZazBoy.MemoryMap.Read(System.UInt16)
+  fullName: ZazBoy.MemoryMap.Read(System.UInt16)
+  nameWithType: MemoryMap.Read(UInt16)
+- uid: ZazBoy.MemoryMap.Read*
+  name: Read
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Read_
+  commentId: Overload:ZazBoy.MemoryMap.Read
+  isSpec: "True"
+  fullName: ZazBoy.MemoryMap.Read
+  nameWithType: MemoryMap.Read
+- uid: ZazBoy.MemoryMap.UNUSED_ADDRESS
+  name: UNUSED_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_UNUSED_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.UNUSED_ADDRESS
+  fullName: ZazBoy.MemoryMap.UNUSED_ADDRESS
+  nameWithType: MemoryMap.UNUSED_ADDRESS
+- uid: ZazBoy.MemoryMap.VRAM_ADDRESS
+  name: VRAM_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_VRAM_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.VRAM_ADDRESS
+  fullName: ZazBoy.MemoryMap.VRAM_ADDRESS
+  nameWithType: MemoryMap.VRAM_ADDRESS
+- uid: ZazBoy.MemoryMap.WRAM_ADDRESS
+  name: WRAM_ADDRESS
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_WRAM_ADDRESS
+  commentId: F:ZazBoy.MemoryMap.WRAM_ADDRESS
+  fullName: ZazBoy.MemoryMap.WRAM_ADDRESS
+  nameWithType: MemoryMap.WRAM_ADDRESS
+- uid: ZazBoy.MemoryMap.Write(System.UInt16,System.Byte)
+  name: Write(UInt16, Byte)
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Write_System_UInt16_System_Byte_
+  commentId: M:ZazBoy.MemoryMap.Write(System.UInt16,System.Byte)
+  fullName: ZazBoy.MemoryMap.Write(System.UInt16, System.Byte)
+  nameWithType: MemoryMap.Write(UInt16, Byte)
+- uid: ZazBoy.MemoryMap.Write*
+  name: Write
+  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Write_
+  commentId: Overload:ZazBoy.MemoryMap.Write
+  isSpec: "True"
+  fullName: ZazBoy.MemoryMap.Write
+  nameWithType: MemoryMap.Write
