--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -1,101 +1,172 @@
 ### YamlMime:XRefMap
 sorted: true
 references:
-- uid: ZazBoy
-  name: ZazBoy
-  href: api/ZazBoy.html
-  commentId: N:ZazBoy
-  fullName: ZazBoy
-  nameWithType: ZazBoy
-- uid: ZazBoy.MemoryMap
+- uid: ZazBoy.GameBoy
+  name: ZazBoy.GameBoy
+  href: api/ZazBoy.GameBoy.html
+  commentId: N:ZazBoy.GameBoy
+  fullName: ZazBoy.GameBoy
+  nameWithType: ZazBoy.GameBoy
+- uid: ZazBoy.GameBoy.GameBoy
+  name: GameBoy
+  href: api/ZazBoy.GameBoy.GameBoy.html
+  commentId: T:ZazBoy.GameBoy.GameBoy
+  fullName: ZazBoy.GameBoy.GameBoy
+  nameWithType: GameBoy
+- uid: ZazBoy.GameBoy.GameBoy.Instance
+  name: Instance()
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_Instance
+  commentId: M:ZazBoy.GameBoy.GameBoy.Instance
+  fullName: ZazBoy.GameBoy.GameBoy.Instance()
+  nameWithType: GameBoy.Instance()
+- uid: ZazBoy.GameBoy.GameBoy.Instance*
+  name: Instance
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_Instance_
+  commentId: Overload:ZazBoy.GameBoy.GameBoy.Instance
+  isSpec: "True"
+  fullName: ZazBoy.GameBoy.GameBoy.Instance
+  nameWithType: GameBoy.Instance
+- uid: ZazBoy.GameBoy.GameBoy.IsPoweredOn
+  name: IsPoweredOn
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_IsPoweredOn
+  commentId: P:ZazBoy.GameBoy.GameBoy.IsPoweredOn
+  fullName: ZazBoy.GameBoy.GameBoy.IsPoweredOn
+  nameWithType: GameBoy.IsPoweredOn
+- uid: ZazBoy.GameBoy.GameBoy.IsPoweredOn*
+  name: IsPoweredOn
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_IsPoweredOn_
+  commentId: Overload:ZazBoy.GameBoy.GameBoy.IsPoweredOn
+  isSpec: "True"
+  fullName: ZazBoy.GameBoy.GameBoy.IsPoweredOn
+  nameWithType: GameBoy.IsPoweredOn
+- uid: ZazBoy.GameBoy.GameBoy.MemoryMap
   name: MemoryMap
-  href: api/ZazBoy.MemoryMap.html
-  commentId: T:ZazBoy.MemoryMap
-  fullName: ZazBoy.MemoryMap
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_MemoryMap
+  commentId: P:ZazBoy.GameBoy.GameBoy.MemoryMap
+  fullName: ZazBoy.GameBoy.GameBoy.MemoryMap
+  nameWithType: GameBoy.MemoryMap
+- uid: ZazBoy.GameBoy.GameBoy.MemoryMap*
+  name: MemoryMap
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_MemoryMap_
+  commentId: Overload:ZazBoy.GameBoy.GameBoy.MemoryMap
+  isSpec: "True"
+  fullName: ZazBoy.GameBoy.GameBoy.MemoryMap
+  nameWithType: GameBoy.MemoryMap
+- uid: ZazBoy.GameBoy.GameBoy.SetPowerOn(System.Boolean)
+  name: SetPowerOn(Boolean)
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_SetPowerOn_System_Boolean_
+  commentId: M:ZazBoy.GameBoy.GameBoy.SetPowerOn(System.Boolean)
+  fullName: ZazBoy.GameBoy.GameBoy.SetPowerOn(System.Boolean)
+  nameWithType: GameBoy.SetPowerOn(Boolean)
+- uid: ZazBoy.GameBoy.GameBoy.SetPowerOn*
+  name: SetPowerOn
+  href: api/ZazBoy.GameBoy.GameBoy.html#ZazBoy_GameBoy_GameBoy_SetPowerOn_
+  commentId: Overload:ZazBoy.GameBoy.GameBoy.SetPowerOn
+  isSpec: "True"
+  fullName: ZazBoy.GameBoy.GameBoy.SetPowerOn
+  nameWithType: GameBoy.SetPowerOn
+- uid: ZazBoy.GameBoy.MemoryMap
+  name: MemoryMap
+  href: api/ZazBoy.GameBoy.MemoryMap.html
+  commentId: T:ZazBoy.GameBoy.MemoryMap
+  fullName: ZazBoy.GameBoy.MemoryMap
   nameWithType: MemoryMap
-- uid: ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.#ctor
+  name: MemoryMap()
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap__ctor
+  commentId: M:ZazBoy.GameBoy.MemoryMap.#ctor
+  fullName: ZazBoy.GameBoy.MemoryMap.MemoryMap()
+  nameWithType: MemoryMap.MemoryMap()
+- uid: ZazBoy.GameBoy.MemoryMap.#ctor*
+  name: MemoryMap
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap__ctor_
+  commentId: Overload:ZazBoy.GameBoy.MemoryMap.#ctor
+  isSpec: "True"
+  fullName: ZazBoy.GameBoy.MemoryMap.MemoryMap
+  nameWithType: MemoryMap.MemoryMap
+- uid: ZazBoy.GameBoy.MemoryMap.CARTRIDGE_ADDRESS
   name: CARTRIDGE_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_CARTRIDGE_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
-  fullName: ZazBoy.MemoryMap.CARTRIDGE_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_CARTRIDGE_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.CARTRIDGE_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.CARTRIDGE_ADDRESS
   nameWithType: MemoryMap.CARTRIDGE_ADDRESS
-- uid: ZazBoy.MemoryMap.EXRAM_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.EXRAM_ADDRESS
   name: EXRAM_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_EXRAM_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.EXRAM_ADDRESS
-  fullName: ZazBoy.MemoryMap.EXRAM_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_EXRAM_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.EXRAM_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.EXRAM_ADDRESS
   nameWithType: MemoryMap.EXRAM_ADDRESS
-- uid: ZazBoy.MemoryMap.HRAM_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.HRAM_ADDRESS
   name: HRAM_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_HRAM_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.HRAM_ADDRESS
-  fullName: ZazBoy.MemoryMap.HRAM_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_HRAM_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.HRAM_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.HRAM_ADDRESS
   nameWithType: MemoryMap.HRAM_ADDRESS
-- uid: ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
   name: INTERRUPT_ENABLE_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_INTERRUPT_ENABLE_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
-  fullName: ZazBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_INTERRUPT_ENABLE_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.INTERRUPT_ENABLE_ADDRESS
   nameWithType: MemoryMap.INTERRUPT_ENABLE_ADDRESS
-- uid: ZazBoy.MemoryMap.IO_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.IO_ADDRESS
   name: IO_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_IO_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.IO_ADDRESS
-  fullName: ZazBoy.MemoryMap.IO_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_IO_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.IO_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.IO_ADDRESS
   nameWithType: MemoryMap.IO_ADDRESS
-- uid: ZazBoy.MemoryMap.OAM_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.OAM_ADDRESS
   name: OAM_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_OAM_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.OAM_ADDRESS
-  fullName: ZazBoy.MemoryMap.OAM_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_OAM_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.OAM_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.OAM_ADDRESS
   nameWithType: MemoryMap.OAM_ADDRESS
-- uid: ZazBoy.MemoryMap.PROHIBITED_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.PROHIBITED_ADDRESS
   name: PROHIBITED_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_PROHIBITED_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.PROHIBITED_ADDRESS
-  fullName: ZazBoy.MemoryMap.PROHIBITED_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_PROHIBITED_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.PROHIBITED_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.PROHIBITED_ADDRESS
   nameWithType: MemoryMap.PROHIBITED_ADDRESS
-- uid: ZazBoy.MemoryMap.Read(System.UInt16)
+- uid: ZazBoy.GameBoy.MemoryMap.Read(System.UInt16)
   name: Read(UInt16)
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Read_System_UInt16_
-  commentId: M:ZazBoy.MemoryMap.Read(System.UInt16)
-  fullName: ZazBoy.MemoryMap.Read(System.UInt16)
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_Read_System_UInt16_
+  commentId: M:ZazBoy.GameBoy.MemoryMap.Read(System.UInt16)
+  fullName: ZazBoy.GameBoy.MemoryMap.Read(System.UInt16)
   nameWithType: MemoryMap.Read(UInt16)
-- uid: ZazBoy.MemoryMap.Read*
+- uid: ZazBoy.GameBoy.MemoryMap.Read*
   name: Read
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Read_
-  commentId: Overload:ZazBoy.MemoryMap.Read
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_Read_
+  commentId: Overload:ZazBoy.GameBoy.MemoryMap.Read
   isSpec: "True"
-  fullName: ZazBoy.MemoryMap.Read
+  fullName: ZazBoy.GameBoy.MemoryMap.Read
   nameWithType: MemoryMap.Read
-- uid: ZazBoy.MemoryMap.UNUSED_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.UNUSED_ADDRESS
   name: UNUSED_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_UNUSED_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.UNUSED_ADDRESS
-  fullName: ZazBoy.MemoryMap.UNUSED_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_UNUSED_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.UNUSED_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.UNUSED_ADDRESS
   nameWithType: MemoryMap.UNUSED_ADDRESS
-- uid: ZazBoy.MemoryMap.VRAM_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.VRAM_ADDRESS
   name: VRAM_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_VRAM_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.VRAM_ADDRESS
-  fullName: ZazBoy.MemoryMap.VRAM_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_VRAM_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.VRAM_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.VRAM_ADDRESS
   nameWithType: MemoryMap.VRAM_ADDRESS
-- uid: ZazBoy.MemoryMap.WRAM_ADDRESS
+- uid: ZazBoy.GameBoy.MemoryMap.WRAM_ADDRESS
   name: WRAM_ADDRESS
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_WRAM_ADDRESS
-  commentId: F:ZazBoy.MemoryMap.WRAM_ADDRESS
-  fullName: ZazBoy.MemoryMap.WRAM_ADDRESS
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_WRAM_ADDRESS
+  commentId: F:ZazBoy.GameBoy.MemoryMap.WRAM_ADDRESS
+  fullName: ZazBoy.GameBoy.MemoryMap.WRAM_ADDRESS
   nameWithType: MemoryMap.WRAM_ADDRESS
-- uid: ZazBoy.MemoryMap.Write(System.UInt16,System.Byte)
+- uid: ZazBoy.GameBoy.MemoryMap.Write(System.UInt16,System.Byte)
   name: Write(UInt16, Byte)
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Write_System_UInt16_System_Byte_
-  commentId: M:ZazBoy.MemoryMap.Write(System.UInt16,System.Byte)
-  fullName: ZazBoy.MemoryMap.Write(System.UInt16, System.Byte)
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_Write_System_UInt16_System_Byte_
+  commentId: M:ZazBoy.GameBoy.MemoryMap.Write(System.UInt16,System.Byte)
+  fullName: ZazBoy.GameBoy.MemoryMap.Write(System.UInt16, System.Byte)
   nameWithType: MemoryMap.Write(UInt16, Byte)
-- uid: ZazBoy.MemoryMap.Write*
+- uid: ZazBoy.GameBoy.MemoryMap.Write*
   name: Write
-  href: api/ZazBoy.MemoryMap.html#ZazBoy_MemoryMap_Write_
-  commentId: Overload:ZazBoy.MemoryMap.Write
+  href: api/ZazBoy.GameBoy.MemoryMap.html#ZazBoy_GameBoy_MemoryMap_Write_
+  commentId: Overload:ZazBoy.GameBoy.MemoryMap.Write
   isSpec: "True"
-  fullName: ZazBoy.MemoryMap.Write
+  fullName: ZazBoy.GameBoy.MemoryMap.Write
   nameWithType: MemoryMap.Write
